# FAERS_AIML

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-pipeline.txt  requirements.txt
.devcontainer/: devcontainer.json
data/: README.md
data/duckdb/: dashboard.duckdb
data/ground_truth/: labeling_template.csv
docs/: demo_walkthrough.md
scripts/: day10_auto_label.py  day10_force_pipeline_gt.py  day6_batch_test.py  day7_verify_step4.py  day7_verify_steps12.py  day8_full_run.py  day8_positive_control.py
src/aetse/: __init__.py
src/aetse/config/: __init__.py  settings.py
src/aetse/dashboard/: __init__.py  app.py  requirements.txt
src/aetse/dashboard/components/: __init__.py  metrics_panel.py  signal_heatmap.py  trace_viewer.py
src/aetse/data/: __init__.py  compute_signals.py  curated_drug_lookup.py  ingest_faers.py  ingest_reviews.py  ingest_rxnorm.py  normalize_drugs.py
src/aetse/evaluation/: __init__.py  run_eval.py
src/aetse/pipeline/: __init__.py  graph.py  runner.py
src/aetse/pipeline/agents/: __init__.py  cache.py  embeddings.py  extraction.py  meddra_mapper.py  rxnorm_matcher.py  statistics.py  validation.py
src/aetse/schemas/: __init__.py
src/aetse/utils/: __init__.py  db.py  logging.py
tests/: conftest.py
tests/integration/: __init__.py  test_edge_cases.py
tests/unit/: __init__.py  test_graph.py  test_schemas.py  test_settings.py
